# glyph-engine

./: .gitattributes  .gitignore  AUDIT-REPORT.md  AUDIT.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  EDGE-TEST-REPORT.md  LANGUAGE.md  LAUNCH.md  LICENSE  PLAN.md  README.md  RELEASE-CHECKLIST.md  ROADMAP.md  TEXTURE-IMPLEMENTATION.md  VISION.md  WIZARD-DESIGN.md
demo/: achievement-progress.frag  achievement-progress.html  achievement-progress.js  achievement-progress.wgsl  ambient-intelligence.frag  ambient-intelligence.html  ambient-intelligence.js  ambient-intelligence.wgsl  celebration-burst.frag  celebration-burst.html  celebration-burst.js  celebration-burst.wgsl  engagement-bars.frag  engagement-bars.html  engagement-bars.js  engagement-bars.wgsl  index.html  scan-ring.frag  scan-ring.html  scan-ring.js  scan-ring.wgsl  score-fingerprint.js  status-orb.frag  status-orb.html  status-orb.js  status-orb.wgsl
deploy/: index.html
dist-banner/: intelligence-banner.d.ts  intelligence-banner.frag  intelligence-banner.js  intelligence-banner.wgsl
docs/: CNAME  index.html
examples/: 001-hello.game  002-multi-layer.glyph  003-memory-trails.glyph  004-cast-types.game  005-temporal-ops.glyph  006-listen-signals.game  007-voice-synth.game  008-score-timeline.game  009-breed-genetics.game  010-gravity-particles.game  011-project-dome.glyph  012-ambient-intelligence.game  012-ambient-intelligence.glyph  013-score-fingerprint.game  013-score-fingerprint.glyph  014-decision-countdown.game  014-decision-countdown.glyph  015-resonate-network.glyph  016-arc-evolution.glyph  017-living-organism.glyph  018-react-turing.game  018-react-turing.glyph  019-swarm-physarum.game  019-swarm-physarum.glyph  020-flow-fields.game  020-flow-fields.glyph  021-domain-warp.glyph  022-cosine-palettes.glyph  023-polar-distort.glyph  024-status-orb.game  024-status-orb.glyph  025-achievement-progress.game  025-achievement-progress.glyph  026-boot-ring.game  026-boot-ring.glyph  027-engagement-bars.game  027-engagement-bars.glyph  028-celebration-burst.game  028-celebration-burst.glyph  029-scan-ring.game  (+70 more)
game-compiler/: Cargo.toml
game-compiler/src/: ast.rs  builtins.rs  lexer.rs  lib.rs  main.rs  parser.rs  parser_tests.rs  resolver.rs  snapshot.rs  token.rs  wasm.rs
game-compiler/src/adapters/: camera.rs  midi.rs  mod.rs  osc.rs  shadertoy.rs
game-compiler/src/codegen/: analysis.rs  breed.rs  cast.rs  expr.rs  glsl.rs  gravity.rs  listen.rs  memory.rs  mod.rs  resonance.rs  score.rs  stages.rs  temporal.rs  voice.rs  wgsl.rs
game-compiler/src/runtime/: arc.rs  component.rs  helpers.rs  html.rs  mod.rs
game-compiler/src/server/: css.rs  export.rs  mod.rs  page.rs  util.rs
game-compiler/tests/: batch_compile.rs
glyph-site/: index.html
mcp-game-server/: package.json
mcp-glyph-server/: package-lock.json  package.json
pkg/: game_compiler.d.ts  game_compiler.js  game_compiler_bg.wasm  game_compiler_bg.wasm.d.ts  glyph_compiler_bg.wasm.d.ts  package.json
playground/: index.html
presets/: aurora.game  battery-level.game  campfire.game  connection-strength.game  countdown-clock.game  crystal-growth.game  energy-sphere.game  health-bar.game  heartbeat-line.game  matrix-code.game  nebula.game  notification-badge.game  ocean-waves.game  progress-bar.game  rain-drops.game  rating-display.game  route-matrix.game  signal-dashboard.game  speed-gauge.game  starfield.game  svg-badge.game  synesthetic.game  temporal-monitor.game  timer-ring.game  xp-ring.game
prompts/: generate-component.md  generate-visual.md
src/: ast.rs  builtins.rs  lexer.rs  lib.rs  lsp.rs  (+5 more)
(+824 files in other folders)
