[package]
name = "game-compiler"
version = "1.0.0"
edition = "2021"
rust-version = "1.75"
description = "GAME (Generative Animation Matrix Engine) — compiles .game DSL to WebGPU shaders + Web Components"
license = "FSL-1.1-Apache-2.0"
authors = ["4DA Systems Pty Ltd <dev@4da.ai>"]
repository = "https://github.com/runyourempire/game-engine"
homepage = "https://4da.ai"
keywords = ["shader", "webgpu", "wgsl", "glsl", "web-components"]
categories = ["compilers", "graphics", "wasm", "web-programming"]
exclude = [
    "target/",
    "tmp-edge-tests/",
    "dist/",
    "dist-banner/",
    "playground/",
    "visual-test/",
    "editors/",
    "wrappers/",
    "AUDIT-REPORT.md",
    "EDGE-TEST-REPORT.md",
    "RELEASE-CHECKLIST.md",
]

[[bin]]
name = "game"
path = "src/main.rs"

[lib]
crate-type = ["rlib"]
name = "game_compiler"
path = "src/lib.rs"

[dependencies]
logos = "0.14"
thiserror = "2"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = { version = "7", features = ["macos_kqueue"] }
tiny_http = "0.12"
wasm-bindgen = { version = "0.2", optional = true }
lsp-server = { version = "0.7", optional = true }
lsp-types = { version = "0.97", optional = true }

[features]
default = []
wasm = ["wasm-bindgen"]
lsp = ["lsp-server", "lsp-types"]
